# tunetutor

./: migrate_seen_lines.py  pyproject.toml  requirements.txt  update_artists.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Auth.tsx  Flashcards.tsx  KanjiExplorer.tsx  Settings.tsx  SettingsContext.tsx  SongViewer.tsx  Stats.tsx  VocabularyBank.tsx  api.ts  index.css
scratch/: verify_links.py
tunetutor/: ai.py  auth.py  database.py  dev.py  email_utils.py  ingest.py  lrclib_test.json  main.py  migrate_data.py  migrate_light.py  models.py  nlp.py  seed.py
